AWS/cftemplate/cf-VPC-EC2Stack.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "CloudFormation template to create a VPC, subnets, EC2 instance with Apache Web Server in us-west-2 using existing KeyPair me-us-west2.",
    "Resources": {
        "MyVPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": "10.0.0.0/16",
                "EnableDnsSupport": true,
                "EnableDnsHostnames": true,
                "Tags": [{ "Key": "Name", "Value": "MyVPC" }]
            }
        },
        "PublicSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": { "Ref": "MyVPC" },
                "CidrBlock": "10.0.1.0/24",
                "MapPublicIpOnLaunch": true,
                "AvailabilityZone": "us-west-2a",
                "Tags": [{ "Key": "Name", "Value": "PublicSubnet" }]
            }
        },
        "PrivateSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": { "Ref": "MyVPC" },
                "CidrBlock": "10.0.2.0/24",
                "AvailabilityZone": "us-west-2b",
                "Tags": [{ "Key": "Name", "Value": "PrivateSubnet" }]
            }
        },
        "InternetGateway": {
            "Type": "AWS::EC2::InternetGateway"
        },
        "GatewayAttachment": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": { "Ref": "MyVPC" },
                "InternetGatewayId": { "Ref": "InternetGateway" }
            }
        },
        "PublicRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": { "Ref": "MyVPC" }
            }
        },
        "PublicRoute": {
            "Type": "AWS::EC2::Route",
            "DependsOn": "GatewayAttachment",
            "Properties": {
                "RouteTableId": { "Ref": "PublicRouteTable" },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": { "Ref": "InternetGateway" }
            }
        },
        "PublicSubnetRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": { "Ref": "PublicSubnet" },
                "RouteTableId": { "Ref": "PublicRouteTable" }
            }
        },
        "WebServerInstance": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "InstanceType": "t2.micro",
                "KeyName": "me-us-west2",
                "ImageId": "ami-0b6d6dacf350ebc82",  
                "SubnetId": { "Ref": "PublicSubnet" },
                "SecurityGroupIds": [{ "Ref": "WebServerSecurityGroup" }],
                "UserData": { "Fn::Base64": "#!/bin/bash\nyum update -y\nyum install -y httpd\nsystemctl start httpd\nsystemctl enable httpd\necho '<h1>Welcome to My Web Server in us-west-2</h1>' > /var/www/html/index.html" }
            }
        },
        "WebServerSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Enable HTTP and SSH access",
                "VpcId": { "Ref": "MyVPC" },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": "0.0.0.0/0"
                    }
                ]
            }
        }
    },
    "Outputs": {
        "WebServerPublicIP": {
            "Description": "Public IP of EC2 instance",
            "Value": { "Fn::GetAtt": ["WebServerInstance", "PublicIp"] }
        }
    }
}
